--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,65 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
-  }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(
+            to bottom,
+            transparent,
+            rgb(var(--background-end-rgb))
+        )
+        rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .text-balance {
+        text-wrap: balance;
+    }
+}
+
+.revealCard1 {
+    animation: revealCardAnimation 1s ease forwards;
+    transition: all 1s ease;
+}
+.revealCard2 {
+    animation: revealCardAnimation 1s ease forwards 0.5s;
+    transition: all 1s ease;
+}
+.revealCard3 {
+    animation: revealCardAnimation 1s ease forwards 1s;
+    transition: all 1s ease;
+}
+.revealCard4 {
+    animation: revealCardAnimation 1s ease forwards 1.5s;
+    transition: all 1s ease;
+}
+.revealCard5 {
+    animation: revealCardAnimation 1s ease forwards 2s;
+    transition: all 1s ease;
+}
+
+.revealCard6 {
+    animation: revealCardAnimation 1s ease forwards 2.5s;
+    transition: all 1s ease;
+}
+
+@keyframes revealCardAnimation {
+    0% {
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+.pokedexBorder {
+    border: 30px solid transparent !important;
+    border-image: url(assets/pokedexBorder.png) 30 !important;
 }
